cmake_minimum_required(VERSION 3.16)
project(CancelTokenDemo)
find_package(Qt6 REQUIRED COMPONENTS Core)
set(CMAKE_AUTOMOC ON)
add_executable(CancelTokenDemo main.cpp)
target_link_libraries(CancelTokenDemo PRIVATE Qt6::Core QCurl)
target_include_directories(CancelTokenDemo PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/src)
set_target_properties(CancelTokenDemo PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/examples/CancelTokenDemo")
message(STATUS "  ✅ CancelTokenDemo 示例已配置")
