cmake_minimum_required(VERSION 3.16)
project(CanonicalRequestDemo)
find_package(Qt6 REQUIRED COMPONENTS Core)
set(CMAKE_AUTOMOC ON)
add_executable(CanonicalRequestDemo main.cpp)
target_link_libraries(CanonicalRequestDemo PRIVATE Qt6::Core QCurl)
target_include_directories(CanonicalRequestDemo PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/src)
set_target_properties(CanonicalRequestDemo PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/examples/CanonicalRequestDemo")
message(STATUS "  ✅ CanonicalRequestDemo 示例已配置")
