cmake_minimum_required(VERSION 3.16)
project(RequestBuilderDemo)
find_package(Qt6 REQUIRED COMPONENTS Core)
set(CMAKE_AUTOMOC ON)
add_executable(RequestBuilderDemo main.cpp)
target_link_libraries(RequestBuilderDemo PRIVATE Qt6::Core QCurl)
target_include_directories(RequestBuilderDemo PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/src)
set_target_properties(RequestBuilderDemo PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/examples/RequestBuilderDemo")
message(STATUS "  ✅ RequestBuilderDemo 示例已配置")
